adding new fonts form google fonts

--- a/WebsiteStyles.css
+++ b/WebsiteStyles.css
@@ -1,13 +1,13 @@
 
 h1{
-    font-family: sans-serif;
+    font-family: 'Oswald', sans-serif;
     text-align: center;
     color: #534b4b
 
 }
 
 p{
-    font-family: sans-serif; 
+    font-family: 'Fira-sans', sans-serif; 
     text-align: center; 
     color: #534b4b
     
@@ -23,5 +23,7 @@ a:hover {
         }
 
 #todays-challenge {
-    color: rgb(170, 96, 83)
+    color: rgb(170, 96, 83);
+    font-weight: bold;
+    font-size: 52px;
 }
