--- a/styles/WebsiteStyles.css
+++ b/styles/WebsiteStyles.css
@@ -39,8 +39,12 @@ body {
     margin: 50px;
 }
 
-#Goal {
-    color: rgb(170, 96, 83);
-    font-weight: bold;
-    font-size: 52px;
+ol {
+    list-style: none;
+    margin: 32px;
+}
+
+li {
+   list-style: none;
+   margin: 32px;
 }
