--- a/styles/WebsiteStyles.css
+++ b/styles/WebsiteStyles.css
@@ -12,14 +12,6 @@ p{
     
 }
 
-a {
-    color: rgb(167, 1, 78);
-    text-decoration: none;
-  }
-
-a:hover {
-          text-decoration: underline;
-        }
 
 #todays-challenge {
     color: rgb(170, 96, 83);
@@ -47,4 +39,21 @@ ol {
 li {
    list-style: none;
    margin: 32px;
+}
+
+a{
+    background-color: rgb(161, 1, 78);
+    color: white;
+    border-radius: 4px;
+    font-family: 24px;
+    text-decoration: none;
+
+}
+
+a:hover{
+
+
+    background-color: rgb(180, 12, 90);
+    text-decoration: none;
+    
 }
