--- a/styles/WebsiteStyles.css
+++ b/styles/WebsiteStyles.css
@@ -65,3 +65,15 @@ a:hover{
     text-decoration: none;
     
 }
+
+h2 {
+    color: rgb(64, 20, 0);
+    font-family: 'Oswald', sans-serif;
+}
+
+#listP {
+
+    margin: 12px;
+    color: rgb(64, 20, 0);
+    font-size: 25px;
+}
