--- a/styles/WebsiteStyles.css
+++ b/styles/WebsiteStyles.css
@@ -55,6 +55,7 @@ a{
     border: 1px solid rgb(161, 1, 78);
     font-family: 24px;
     text-decoration: none;
+    display: inline-block;
 
 }
 
@@ -81,3 +82,4 @@ h2 {
 .goal {
     background-color: rgb(224, 124, 111);
 }
+
