--- a/styles/WebsiteStyles.css
+++ b/styles/WebsiteStyles.css
@@ -3,13 +3,16 @@ h1{
     font-family: 'Oswald', sans-serif;
     color: #534b4b;
     margin: 0;
+    text-align: center;
     
 
 }
 
 p{
     font-family: 'Fira-sans', sans-serif; 
-    color: #534b4b
+    color: #534b4b;
+    text-align: center;
+    
     
 }
 
@@ -85,3 +88,12 @@ h2 {
     background-color: rgb(224, 124, 111);
 }
 
+main {
+    width: 800px;
+    margin: 200px auto 72px auto;
+    background-color: rgb(219, 108, 94);
+    padding: 24px;
+    border: 5px solid rgb(0, 0, 0);
+    border-radius: 8px;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.2);
+}
