aligning the text

--- a/siteNoTwo/styles/MPStyles.css
+++ b/siteNoTwo/styles/MPStyles.css
@@ -1,16 +1,36 @@
 body{
-    text-align: center;
     margin: 30px;
+    
 }
 
 h1 {
     color: rgb(83, 4, 186);
     font-size: 50px;
+    text-align: center;
    
+}
+
+h2{
+    margin: 100px;
 }
 
 
 img{
     width: 300px;
+    margin-left: 567px;
+    
+}
+
+p {
+    margin-left: 100px;
+}
+
+li {
+    margin-left: 10px;
+}
+
+#FirstList {
+    margin-left: 10px;
+
 }
 
