changing the list

--- a/siteNoTwo/styles/MPStyles.css
+++ b/siteNoTwo/styles/MPStyles.css
@@ -47,6 +47,7 @@ ul {
     border: 5px solid rgb(103, 6, 176);
     background-color: rgb(103, 6, 176);
     border-radius: 50px;
+    list-style: square;
 }
 
 #HTwo {
