--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -3,3 +3,12 @@ body {
     margin: 0px
 }
 
+#page-logo a{
+    padding: 10px;
+    font-family: "Oleo script", sans-serif;
+    color: rgb(245, 243, 160);
+    text-decoration: none;
+    font-size: 50px;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0);
+}
