--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -30,6 +30,16 @@ Header li {
     background-size: cover;
 }
 
+#hero-content {
+    width: 900px;
+    background-color: rgb(51, 47, 47, 0.8);
+    box-shadow: 2px, 4px, 8px rgb(68, 67, 67);
+    border-radius: 8px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 50px;
+}
+
 #page-logo a{
     padding: 10px;
     font-family: "Oleo script", sans-serif;
