--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -31,13 +31,15 @@ Header li {
 }
 
 #hero-content {
-    width: 900px;
+    width: 500px;
     background-color: rgb(51, 47, 47, 0.8);
     box-shadow: 2px, 4px, 8px rgb(68, 67, 67);
     border-radius: 8px;
     text-align: center;
     margin: 0 auto;
     padding: 50px;
+    position: relative;
+    top: 400px;
 }
 
 #page-logo a{
