--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -51,7 +51,19 @@ Header li {
 }
 
 
+#hero-content a {
+    font-size: 30px;
+    font-family:'Ralway', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+    color:blue;
+    text-decoration: none;
+    border: 10px;
+    background-color:white;
+    padding: 5px;
+    border-radius: 3px;
    
+}
 
     
 
