styling the images

--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -115,7 +115,14 @@ Header li {
 }
 
 .destination {
-  margin: 0 20px;
-  width: 25%;
+    margin: 0 20px;
+}
+
+.destination img {
+  height: 200px;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 2px, 4px, 8px rgb(64, 67, 67);
+  object-fit: contain;
 }
 
