--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -102,6 +102,14 @@ Header li {
     color: blue;
 }
 
+#highlights h2{
+    text-transform: uppercase;
+    font-size: 40px;
+    color: rgb(59, 65, 64);
+    margin: 24px 0;
+    
+}
+
 #highlights ul {
    list-style: none;
 }
@@ -126,3 +134,8 @@ Header li {
   object-fit: contain;
 }
 
+.destination strong {
+    text-transform: uppercase;
+    font-size: 20px;
+    color: rgb(86, 184, 57);
+}
