adding padding and a background color for the highlights

--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -97,6 +97,11 @@ Header li {
     border-radius: 5px;
 }
 
+#highlights{
+    padding: 24px;
+    background-color: rgb(227, 255, 253);
+}
+
 #info-link:hover {
     background-color: white;
     color: blue;
