--- a/siteNoThree/IndexStyles.css
+++ b/siteNoThree/IndexStyles.css
@@ -99,7 +99,7 @@ Header li {
 
 #highlights{
     padding: 24px;
-    background-color: rgb(227, 255, 253);
+    background: linear-gradient(45deg, rgb(227, 255, 253), rgb(202, 243, 240))
 }
 
 #info-link:hover {
