--- a/siteNoThree/styles/IndexStyles.css
+++ b/siteNoThree/styles/IndexStyles.css
@@ -214,3 +214,13 @@ footer img{
     text-align: right;
 }
 
+.actions a{
+    text-decoration: none;
+    color: rgb(22, 211, 228);
+    border-radius: 5px;
+    padding: 5px;
+}
+
+.actions a:hover {
+    background-color: rgb(179, 224, 229);
+}
