--- a/siteNoThree/styles/IndexStyles.css
+++ b/siteNoThree/styles/IndexStyles.css
@@ -179,8 +179,11 @@ footer img{
 
 #destinationMain ul{
    list-style: none;
-   width: 800px;
+   width: 1200px;
    margin-bottom: 0px;
+   display: grid;
+   grid-template-columns: 1fr 1fr;
+   gap: 20px 20px;
 
    
   
@@ -188,8 +191,9 @@ footer img{
 
 #destinationMain li img {
     width: 400px;
-    height: 280px;
+    height: 360px;
     object-fit: cover;
+    margin: 0px;
 }
 
 #destinationMain li{
@@ -198,9 +202,6 @@ footer img{
     box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
     border-radius: 6px;
     overflow: hidden;
-
-
-    
 }
 
 .item-content {
@@ -223,4 +224,8 @@ footer img{
 
 .actions a:hover {
     background-color: rgb(179, 224, 229);
+}
+
+#destinationMain li:nth-of-type(3) {
+   grid-column: 1 / span 2;
 }
