--- a/siteNoFour/styles/indexStyless.css
+++ b/siteNoFour/styles/indexStyless.css
@@ -17,6 +17,7 @@ body a{
     justify-content: space-between;
     background-color: black;
     align-items: center;
+    padding: 0 5%;
 }
 
 #main_header ul{
@@ -25,9 +26,8 @@ body a{
 
 #main_header nav a{
     padding: 5px;
-    margin-right: 15px;
     font: 300;
-    font-size: 20px;
+    font-size: 1.25rem;
     color: rgb(185, 131, 31)
 
 }
@@ -37,10 +37,8 @@ body a{
 }
 
 #logo {
-    margin-left: 25px;
-    margin-right: 15px;
     font: 500;
-    font-size: 60px;   
+    font-size: 1.5rem;   
     text-transform: uppercase;
     color: rgb(238, 164, 80)
 }
@@ -48,18 +46,18 @@ body a{
 main h1 {
   text-align: center;
   color:rgb(238, 164, 80);
-  font-size: 48px;
+  font-size: 3rem;
 }
 
 #products {
     width: 80%;
-    margin: 50px auto;
+    margin: 2rem auto;
 }
 
 #products ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 16px;
+    gap: 1rem;
 }
 
 #food-items {
@@ -82,7 +80,7 @@ main h1 {
 }
 
 .btn {
-    padding: 5px;
+    padding: 0.5rem 1.5rem;
     background-color: rgb(228, 157, 44);
     color: white;
     border-radius: 5px;
