adding more queries

--- a/siteNoFour/styles/indexStyless.css
+++ b/siteNoFour/styles/indexStyless.css
@@ -90,8 +90,16 @@ main h1 {
     background-color: rgb(221, 134, 34);
 }
 
-@media (max-width: 731px) {
+@media (max-width: 45.6875rem) {
     #products ul {
         grid-template-columns: 1fr;
+    }
+
+    #main_header nav a{
+       display: none;
+    }
+
+    main h1{
+        font-size: 1.5rem;
     }
 }
