--- a/siteNoFour/styles/indexStyless.css
+++ b/siteNoFour/styles/indexStyless.css
@@ -43,6 +43,21 @@ body a{
     color: rgb(238, 164, 80)
 }
 
+.burgerBtn {
+   width: 3rem;
+   height: 3rem;
+   display: flex;
+   justify-content: space-around;
+   flex-direction: column;
+
+}
+
+.burgerBtn span {
+    width: 100%;
+    height: 3px;
+    background-color: white;
+}
+
 main h1 {
   text-align: center;
   color:rgb(238, 164, 80);
