creating a side drawer

--- a/siteNoFour/styles/indexStyless.css
+++ b/siteNoFour/styles/indexStyless.css
@@ -58,6 +58,32 @@ body a{
     background-color: white;
 }
 
+#sideDrawer {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(29, 26, 27);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+#sideDrawer li{
+   margin: 1rem;
+}
+
+#sideDrawer ul{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    margin-top: 6rem;
+    
+}
+
+#sideDrawer a{
+    font-size: 2rem;
+    color: white;
+}
+
 main h1 {
   text-align: center;
   color:rgb(238, 164, 80);
