--- a/siteNoFour/styles/indexStyless.css
+++ b/siteNoFour/styles/indexStyless.css
@@ -65,6 +65,7 @@ body a{
     position: fixed;
     top: 0;
     left: 0;
+    display: none;
 }
 
 #sideDrawer li{
@@ -77,6 +78,10 @@ body a{
     flex-direction: column;
     margin-top: 6rem;
     
+}
+
+#sideDrawer:target{
+    display: block;
 }
 
 #sideDrawer a{
