--- a/siteNoFive/formStyles.css
+++ b/siteNoFive/formStyles.css
@@ -7,4 +7,10 @@ input {
     margin-left: 40rem;
     width: 300px;
     padding: 10px;
+    display: block;
+}
+
+button {
+    display: block;
+    margin-left: 40rem;
 }
