--- a/siteNoFive/formStyles.css
+++ b/siteNoFive/formStyles.css
@@ -2,16 +2,22 @@ body {
     background-color: black;
 }
 
+form {
+    width: 30rem;
+    margin: 3rem auto;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 10px;
+
+}
+
 input {
-    margin-top: 5rem;
-    margin-left: 40rem;
-    width: 300px;
-    padding: 10px;
+    width: 100%;
     display: block;
+    margin-bottom: 1rem;
 }
 
 button {
     display: block;
-    margin-left: 40rem;
     margin-top: 15px;
 }
