--- a/siteNoFive/formStyles.css
+++ b/siteNoFive/formStyles.css
@@ -17,6 +17,10 @@ input, textarea, select {
     margin-bottom: 1rem;
 }
 
+select{
+    width: 50px
+}
+
 button {
     display: block;
     margin-top: 15px;
